2007-11-10  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c
	(gimp_prop_file_chooser_button_*): remove all sorts of workarounds
	for bugs of GtkFileChooserButton in GTK+ versions prior to 2.12.

2007-11-10  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: remove event boxes that were
	only there for the old tooltips.

	* modules/cdisplay_lcms.c: ditto. Also remove some code that was
	only needed because of the event box hack.

2007-11-10  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpairbrushtool.c (gimp_airbrush_tool_init)
	* app/tools/gimppenciltool.c (gimp_pencil_tool_init): don't enable
	color picking, it already gets enabled by the parent class.

2007-11-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c (browser_dialog_make_index_foreach):
	deal gracefully with NULL titles.

2007-11-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.c (gimp_curve_view_expose): align the
	overlay with the pixel grid.

2007-11-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.c: draw the selected point filled and
	outlines for the unselected points.

2007-11-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.c (gimp_curve_view_expose): draw the
	center grid lines slightly stronger than the other grid lines.

2007-11-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.c (gimp_curve_view_expose): draw the
	cursor position using a translucent overlay.

2007-11-09  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcurveview.[ch]: added construct-only properties
	to control the number of grid rows and columns. Increased the
	default values to 8.

2007-11-09  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimphelpui.[ch]: use the new tooltip API instead
	of the old deprecated one. Removed _gimp_help_init(). Remember
	whether tooltips are enabled or not in a local variable that can
	only be altered at startup time and not after. The API now expects